# customIDE

./: .gitignore  CMakeLists.txt  README.md
resources/: icons.qrc
src/: main.cpp
